modelling blog blog

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -80,7 +80,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="https://carlosdanieljimenez.com/imprint/" />
+  <link rel="canonical" href="https://carlosjimenez88m.github.io/imprint/" />
 
   
   
@@ -112,7 +112,7 @@
   
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+  <meta name="twitter:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
   <meta name="twitter:title" content="A blog about Data Science and MLOps">
   <meta name="twitter:description" content="Legal Disclosure Information in accordance with the applicable law
 Carlos Daniel Jiménez
@@ -122,7 +122,7 @@ Colombia">
 
 
   
-  <meta property="og:url" content="https://carlosdanieljimenez.com/imprint/">
+  <meta property="og:url" content="https://carlosjimenez88m.github.io/imprint/">
   <meta property="og:site_name" content="A blog about Data Science and MLOps">
   <meta property="og:title" content="A blog about Data Science and MLOps">
   <meta property="og:description" content="Legal Disclosure Information in accordance with the applicable law
@@ -131,7 +131,7 @@ Carlos Daniel Jiménez
 Colombia">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
-    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
 
 
 
@@ -160,7 +160,7 @@ Colombia">
         "isFamilyFriendly": "true",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https:\/\/carlosdanieljimenez.com\/imprint\/"
+            "@id": "https:\/\/carlosjimenez88m.github.io\/imprint\/"
         },
         "author" : {
             "@type": "Person",
@@ -185,10 +185,10 @@ Colombia">
         "publisher":{
             "@type":"Organization",
             "name": "Carlos Daniel Jiménez",
-            "url": "https://carlosdanieljimenez.com/",
+            "url": "https://carlosjimenez88m.github.io/",
             "logo": {
                 "@type": "ImageObject",
-                "url": "https:\/\/carlosdanieljimenez.com\/favicons\/favicon-32x32.png",
+                "url": "https:\/\/carlosjimenez88m.github.io\/favicons\/favicon-32x32.png",
                 "width":"32",
                 "height":"32"
             }
@@ -196,14 +196,14 @@ Colombia">
         "image": 
       [
         
-        "https://carlosdanieljimenez.com/images/site-feature-image.png"
+        "https://carlosjimenez88m.github.io/images/site-feature-image.png"
 
 
       
       ]
 
     ,
-        "url" : "https:\/\/carlosdanieljimenez.com\/imprint\/",
+        "url" : "https:\/\/carlosjimenez88m.github.io\/imprint\/",
         "wordCount" : "15",
         "genre" : [ ],
         "keywords" : [ ]
