--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="https://carlosdanieljimenez.com/404.html" />
+  <link rel="canonical" href="https://carlosjimenez88m.github.io/404.html" />
 
   
   
@@ -114,20 +114,20 @@
   
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+  <meta name="twitter:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="A blog about Data Science and MLOps">
 
 
 
   
-  <meta property="og:url" content="https://carlosdanieljimenez.com/404.html">
+  <meta property="og:url" content="https://carlosjimenez88m.github.io/404.html">
   <meta property="og:site_name" content="A blog about Data Science and MLOps">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="A blog about Data Science and MLOps">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
 
 
 
@@ -346,7 +346,7 @@
     <h1>404</h1>
     <h2>Page Not Found</h2>
     <p>Sorry, this page does not exist.</p>
-    <p>You can head back to <a href="https://carlosdanieljimenez.com/">homepage</a>.</p>
+    <p>You can head back to <a href="https://carlosjimenez88m.github.io/">homepage</a>.</p>
   </div>
 
       </main>
