--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="https://carlosdanieljimenez.com/" />
+  <link rel="canonical" href="https://carlosjimenez88m.github.io/" />
 
   
   <link rel="alternate" type="application/rss+xml" href="/index.xml" title="A blog about Data Science and MLOps" />
@@ -113,18 +113,18 @@
   
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+  <meta name="twitter:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
   <meta name="twitter:title" content="A blog about Data Science and MLOps">
 
 
 
   
-  <meta property="og:url" content="https://carlosdanieljimenez.com/">
+  <meta property="og:url" content="https://carlosjimenez88m.github.io/">
   <meta property="og:site_name" content="A blog about Data Science and MLOps">
   <meta property="og:title" content="A blog about Data Science and MLOps">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosjimenez88m.github.io/images/site-feature-image.png">
 
 
 
@@ -134,9 +134,9 @@
       "@context": "http://schema.org",
       "@type": "WebSite",
       "name": "A blog about Data Science and MLOps",
-      "url": "https:\/\/carlosdanieljimenez.com\/",
+      "url": "https:\/\/carlosjimenez88m.github.io\/",
       "description": "A blog about Data Science and MLOps",
-      "thumbnailUrl": "https:\/\/carlosdanieljimenez.com\/",
+      "thumbnailUrl": "https:\/\/carlosjimenez88m.github.io\/",
       "license": ""
     }
   </script>
