--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://carlosjimenez88m.github.io/about/</title>
-    <link rel="canonical" href="https://carlosjimenez88m.github.io/about/">
+    <title>carlosjimenez88m.github.io/about/</title>
+    <link rel="canonical" href="carlosjimenez88m.github.io/about/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://carlosjimenez88m.github.io/about/">
+    <meta http-equiv="refresh" content="0; url=carlosjimenez88m.github.io/about/">
   </head>
 </html>
