change model web page

--- a/public/awards/index.html
+++ b/public/awards/index.html
@@ -226,7 +226,7 @@
       />
       
         <div class="sidebar__introduction-title">
-          <a href="/carlosjimenez88m.github.io">Carlos Daniel Jiménez</a>
+          <a href="/carlosjimenez88m.github.io">The Probability and the Word</a>
         </div>
       
       <div class="sidebar__introduction-description">
