--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
       
         <div class="sidebar__introduction-title">
           <h1>
-            <a href="/carlosjimenez88m.github.io">Carlos Daniel Jiménez</a>
+            <a href="/carlosjimenez88m.github.io">The Probability and the Word</a>
           </h1>
         </div>
       
