--- a/imprint/index.html
+++ b/imprint/index.html
@@ -232,7 +232,7 @@ Colombia">
       />
       
         <div class="sidebar__introduction-title">
-          <a href="/carlosjimenez88m.github.io">Carlos Daniel Jiménez</a>
+          <a href="/carlosjimenez88m.github.io">The Probability and the Word</a>
         </div>
       
       <div class="sidebar__introduction-description">
