--- a/public/about/index.html
+++ b/public/about/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/example.com\/about\/",
-        "wordCount" : "148",
+        "wordCount" : "348",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -510,7 +510,61 @@
       
         <h1>About</h1>
       
-      <p>Written in Go, Hugo is an open source static site generator available under the <a href="https://github.com/gohugoio/hugo/blob/master/LICENSE">Apache License 2.0.</a> Hugo supports TOML, YAML and JSON data file types, Markdown and HTML content files and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification and support for Sass SCSS workflows.</p>
+      <h3 id="who-is-carlos-daniel">Who is Carlos Daniel?</h3>
+<ul>
+<li>
+<p>Father of two princesses</p>
+</li>
+<li>
+<p>I am a Colombian Data Scientist and Machine Learning DevOps Engineer.</p>
+</li>
+<li>
+<p>I define myself as Caribbean because of my love for the Caribbean, the sea, and the lifestyle it brings.</p>
+</li>
+<li>
+<p>I use Mac and Linux for their good practices.</p>
+</li>
+<li>
+<p>When I want to program, I work in TMUX, and when I want to deploy, I use Pycharm.</p>
+</li>
+<li>
+<p>I have a weakness for books and literature.</p>
+</li>
+<li>
+<p>I started programming in R and Matlab.</p>
+</li>
+<li>
+<p>I have an addiction to Docker and Kubernetes.</p>
+</li>
+<li>
+<p>My favorite framework is TensorFlow.</p>
+</li>
+<li>
+<p>I work on AI programming using Nvidia’s framework.</p>
+</li>
+<li>
+<p>I use Raspberry Pi for everything that isn’t AI programming.</p>
+</li>
+<li>
+<p>Mlflow is my go-to for most of my pipelines.</p>
+</li>
+<li>
+<p>I teach Applied Machine Learning at universities in Colombia, Chile, and Argentina.</p>
+</li>
+<li>
+<p>In my pre-data life, I was a professor of General History, Religion, and Economics.</p>
+</li>
+<li>
+<p>My applied research area is psychiatric genetics and AI applications in Neuroscience.</p>
+</li>
+<li>
+<p>I’ve worked at Yale University, the Inter-American Development Bank (IDB), the United Nations, Mercado Libre, and Globant.</p>
+</li>
+<li>
+<p>In my free time, I dedicate myself to music and literature. I am currently studying the complete works of Jules Verne as a professional reader.</p>
+</li>
+</ul>
+<p>Written in Go, Hugo is an open source static site generator available under the <a href="https://github.com/gohugoio/hugo/blob/master/LICENSE">Apache License 2.0.</a> Hugo supports TOML, YAML and JSON data file types, Markdown and HTML content files and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification and support for Sass SCSS workflows.</p>
 <p>Hugo makes use of a variety of open source projects including:</p>
 <ul>
 <li><a href="https://github.com/yuin/goldmark">https://github.com/yuin/goldmark</a></li>
