testing blog-post no 20

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -474,7 +474,7 @@
       
         <h1>Who Is Carlos Daniel?</h1>
       
-      <p><img src="https://github.com/carlosjimenez88M/carlosjimenez88m.github.io/blob/master/images/raspberry.jpeg"></p>
+      <p><img src="https://github.com/carlosjimenez88M/carlosjimenez88m.github.io/blob/master/images/raspberry.jpeg?raw=true"></p>
 <ul>
 <li>
 <p>Father of two princesses</p>
