--- a/public/about/index.html
+++ b/public/about/index.html
@@ -480,7 +480,7 @@
       
         <h1>About</h1>
       
-      <p><img src="https://github.com/carlosjimenez88M/carlosjimenez88m.github.io/blob/master/images/raspberry.jpeg?raw=true"></p>
+      <p><img src="https://github.com/carlosjimenez88M/carlosjimenez88m.github.io/blob/master/images/WhatsApp%20Image%202024-10-14%20at%2016.49.46.jpeg?raw=true"></p>
 <h3 id="who-is-this-blog-for">Who is this blog for?</h3>
 <ul>
 <li>Years ago, I had a blog called &lsquo;A Data Scientist Says&rsquo; aimed at my students, but interestingly, I received more attention from data science researchers from all over the world. As a result, I gradually changed the way I expressed some ideas and hypotheses in that blog.</li>
