--- a/public/about/index.html
+++ b/public/about/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/carlosdanieljimenez.com\/about\/",
-        "wordCount" : "465",
+        "wordCount" : "513",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -491,6 +491,8 @@
 </ul>
 </li>
 </ul>
+<h3 id="why-probability-and-words">Why Probability and Words?</h3>
+<p>I believe I spend 90% of my time developing NLP and LLM solutions, and I’ve always been a lover of literature. That’s why many of the explanations I will bring to this blog will be connected to that—the value of words when developing solutions!</p>
 <h3 id="who-is-carlos-daniel">Who is Carlos Daniel?</h3>
 <p>Hello, I’m Carlos Daniel! I define myself by my obsessions, which include computer science applied to the world of data, followed closely by AI applied to neuroscience topics, and lastly, the history of religion and its role in the macro-historical context of how these influences shape societies&rsquo; behaviors. These topics cover the two sides of the coin regarding what I think about and what I develop.</p>
 <p>Here are some random facts:</p>
