--- a/404.html
+++ b/404.html
@@ -122,7 +122,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/404.html">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="A blog about Data Science and MLOps">
   <meta property="og:locale" content="en">
