--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/about/">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="About">
   <meta property="og:description" content="Hugo, the world&#39;s fastest framework for building websites">
   <meta property="og:locale" content="en">
