--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <link rel="canonical" href="https://carlosdanieljimenez.com/" />
 
   
-  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="My blog" />
+  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="The Probability and the Word" />
   
   
   
@@ -114,14 +114,14 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
-  <meta name="twitter:title" content="My blog">
+  <meta name="twitter:title" content="The Probability and the Word">
 
 
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/">
-  <meta property="og:site_name" content="My blog">
-  <meta property="og:title" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
+  <meta property="og:title" content="The Probability and the Word">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
     <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
@@ -133,7 +133,7 @@
     {
       "@context": "http://schema.org",
       "@type": "WebSite",
-      "name": "My blog",
+      "name": "The Probability and the Word",
       "url": "https:\/\/carlosdanieljimenez.com\/",
       "description": "A blog about Data Science and MLOps",
       "thumbnailUrl": "https:\/\/carlosdanieljimenez.com\/",
