--- a/public/series/edge-computing/index.html
+++ b/public/series/edge-computing/index.html
@@ -85,7 +85,7 @@
   <link rel="canonical" href="https://carlosdanieljimenez.com/series/edge-computing/" />
 
   
-  <link rel="alternate" type="application/rss+xml" href="/series/edge-computing/index.xml" title="My blog" />
+  <link rel="alternate" type="application/rss+xml" href="/series/edge-computing/index.xml" title="The Probability and the Word" />
   
   
   
@@ -123,7 +123,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/series/edge-computing/">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="Edge Computing">
   <meta property="og:description" content="A blog about Data Science and MLOps">
   <meta property="og:locale" content="en">
