--- a/contact/index.html
+++ b/contact/index.html
@@ -122,7 +122,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/contact/">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="Contact">
   <meta property="og:description" content="Contact Page">
   <meta property="og:locale" content="en">
