--- a/public/awards/index.html
+++ b/public/awards/index.html
@@ -122,7 +122,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/awards/">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="Awards">
   <meta property="og:description" content="Hugo Awards, an annual literary award for the best science fiction or fantasy works">
   <meta property="og:locale" content="en">
