--- a/public/certifications/index.html
+++ b/public/certifications/index.html
@@ -122,7 +122,7 @@
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/certifications/">
-  <meta property="og:site_name" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="Certifications">
   <meta property="og:description" content="Hugo Certifications">
   <meta property="og:locale" content="en">
