--- a/public/imprint/index.html
+++ b/public/imprint/index.html
@@ -113,7 +113,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
-  <meta name="twitter:title" content="My blog">
+  <meta name="twitter:title" content="The Probability and the Word">
   <meta name="twitter:description" content="Legal Disclosure Information in accordance with the applicable law
 Jane Doe
 Anatole Street 10
@@ -124,8 +124,8 @@ Germany">
 
   
   <meta property="og:url" content="https://carlosdanieljimenez.com/imprint/">
-  <meta property="og:site_name" content="My blog">
-  <meta property="og:title" content="My blog">
+  <meta property="og:site_name" content="The Probability and the Word">
+  <meta property="og:title" content="The Probability and the Word">
   <meta property="og:description" content="Legal Disclosure Information in accordance with the applicable law
 Jane Doe
 Anatole Street 10
