--- a/public/index.html
+++ b/public/index.html
@@ -453,7 +453,7 @@ Remember that you can also specify a section header for the posts below by confi
     >
       
       <div class="post__content">
-        <h3><a href="/post/artifacts-designs/">EDGE COMPUTING AND EDGE MACHINE LEARNING</a></h3>
+        <h3><a href="/post/artifacts-designs/">ARTIFACT DESIGN</a></h3>
         
           <p><h2 id="artifact-design-and-pipeline-in-mlops-part-i">Artifact Design and Pipeline in MLOps Part I</h2>
 <p>In MLOps, most of the work focuses on the <strong>inference stage</strong>, specifically the development of microservices. However, the broader picture goes beyond this—it includes aspects ranging from programming practices to resource utilization that need to be evaluated. This is where the role of a <strong>Machine Learning DevOps Engineer</strong> becomes crucial. In this post, I want to address this profile by approaching it from the perspective of designing a model.</p></p>
