--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   
     class="html theme--light"
   
-><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+><head>
   <meta charset="utf-8" />
   <title>
     
@@ -45,7 +45,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="http://localhost:1313/" />
+  <link rel="canonical" href="https://carlosdanieljimenez.com/" />
 
   
   
@@ -62,12 +62,12 @@
   
 
   
-  <meta property="og:url" content="http://localhost:1313/">
+  <meta property="og:url" content="https://carlosdanieljimenez.com/">
   <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="The Probability and the Word">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
 
 
   
@@ -76,9 +76,9 @@
       "@context": "http://schema.org",
       "@type": "WebSite",
       "name": "The Probability and the Word",
-      "url": "http:\/\/localhost:1313\/",
+      "url": "https:\/\/carlosdanieljimenez.com\/",
       "description": "A blog about Data Science and MLOps",
-      "thumbnailUrl": "http:\/\/localhost:1313\/",
+      "thumbnailUrl": "https:\/\/carlosdanieljimenez.com\/",
       "license": "2024-2025"
     }
   </script>
