fix: force new build #6

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
   
     class="html theme--light"
   
-><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+><head>
   <meta charset="utf-8" />
   <title>
     
@@ -47,7 +47,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="http://localhost:1313/404.html" />
+  <link rel="canonical" href="https://carlosdanieljimenez.com/404.html" />
 
   
   
@@ -62,13 +62,13 @@
   
 
   
-  <meta property="og:url" content="http://localhost:1313/404.html">
+  <meta property="og:url" content="https://carlosdanieljimenez.com/404.html">
   <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="A blog about MLOps">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
 
 
   
@@ -341,7 +341,7 @@
     <h1>404</h1>
     <h2>Page Not Found</h2>
     <p>Sorry, this page does not exist.</p>
-    <p>You can head back to <a href="http://localhost:1313/">homepage</a>.</p>
+    <p>You can head back to <a href="https://carlosdanieljimenez.com/">homepage</a>.</p>
   </div>
 
       </main>
