Adding new post MLops and Servers with Raspberry pi 5 #17

--- a/public/index.html
+++ b/public/index.html
@@ -413,7 +413,7 @@ Remember that you can also specify a section header for the posts below by confi
           </span
         >
         
-          <span><a class="category" href="/categories/edge-computing/">Edge Computing</a><a class="category" href="/categories/mlops/">MLOps</a></span>
+          <span><a class="category" href="/categories/blog/">Blog</a></span>
 
 
         
