--- a/public/series/index.html
+++ b/public/series/index.html
@@ -6,7 +6,7 @@
   
     class="html theme--light"
   
-><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+><head>
   <meta charset="utf-8" />
   <title>
     
@@ -71,7 +71,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/favicon-16x16.png" />
 
-  <link rel="canonical" href="http://localhost:1313/series/" />
+  <link rel="canonical" href="https://carlosdanieljimenez.com/series/" />
 
   
   
@@ -108,17 +108,17 @@
   
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/images/site-feature-image.png">
+  <meta name="twitter:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
   <meta name="twitter:title" content="Series">
   <meta name="twitter:description" content="A blog about MLOps">
 
-  <meta property="og:url" content="http://localhost:1313/series/">
+  <meta property="og:url" content="https://carlosdanieljimenez.com/series/">
   <meta property="og:site_name" content="The Probability and the Word">
   <meta property="og:title" content="Series">
   <meta property="og:description" content="A blog about MLOps">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/site-feature-image.png">
+    <meta property="og:image" content="https://carlosdanieljimenez.com/images/site-feature-image.png">
 
 
   
